overlays/stg/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restful-app
spec:
  selector:
    matchLabels:
      app: restful-app
  template:
    metadata:
      labels:
        app: restful-app
    spec:
      serviceAccountName: restful-app-stg-sa
      automountServiceAccountToken: true
      containers:
        - name: restful-app
          command:
            - node
            - main.js
          resources:
            requests:
              memory: "512Mi"
              cpu: "20m"
            limits:
              memory: "1024Mi"
              cpu: "40m"
