overlays/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restful-app-ingress
  namespace: restful-stg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: restful-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restful-app
                port:
                  number: 80
